feat: cache tour team